# Replay

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  README_app.md  TASKS.md  UPLOAD_DEBUG_SUMMARY.md  railway.toml  run_gradle_java21.bat  run_server_debug.sh
.claude/: railway-debug-guide.md  settings.local.json
.github/workflows/: ci.yml
app/: .env.example  .gitignore  README.md  README_app.md  pubspec.yaml
app/lib/: app.dart  main.dart  main_prod.dart
app/linux/: CMakeLists.txt
app/test/: record_screen_test.dart  (+2 more)
infra/: Dockerfile.server  Makefile  README.md  docker-compose.yml
server/: .env.example  .gitignore  DEPLOYMENT.md  Procfile  README_server.md  alembic.ini  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_add_oauth_fields.py  0003_add_speakers_to_transcripts.py  0004_add_indexes_for_auth_performance.py  20240601_0001_create_tables.py
server/scripts/: DEPLOYMENT_GUIDE.md  check_recent.sh  debug_uploads.py  diagnose_sessions.py  dump_sessions.py  fix_missing_summaries.py  init_db.py  regenerate_summaries.py  run_migrations.py  test_upload.py  verify_gemini.py
server/src/: app.py  main.py
server/src/api/: __init__.py  auth.py  deps.py  sessions.py  upload.py  uploads.py
server/src/core/: config.py  database.py  db.py  deps.py  security.py
server/src/models/: __init__.py  audio_asset.py  entities.py  enums.py  job.py  message.py  session.py  summary.py  transcript.py  user.py
server/src/schemas/: auth.py  base.py  chat.py  session.py  storage.py  upload.py
server/src/services/: auth.py  auth_service.py  chat.py  chat_service.py  gemini.py  gemini_service.py  jobs.py  jobs_service.py  session_service.py  storage.py  storage_service.py  transcription.py  transcription_service.py
server/src/workers/: consumer.py
server/tests/: conftest.py  test_auth.py  test_sessions.py  test_storage_service.py
server/workers/: transcription_worker.py
(+60 files in other folders)
