[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replay-server"
version = "0.1.0"
description = "FastAPI backend for Replay"
authors = [{name = "Replay"}]
readme = "README_server.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-dotenv==1.0.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "sqlalchemy[asyncio]==2.0.30",
    "alembic==1.13.1",
    "aiosqlite==0.19.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "tenacity==8.2.3"
]

[project.optional-dependencies]
dev = ["pytest==8.2.2", "pytest-asyncio==0.23.7"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]
